# Multi-agent-AI-Assisted-system

./: .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_add_film_streaming_available.py  0002_create_streaming_subscription.py
app/: config.py  db.py  main.py  mcp_client.py  mcp_server.py  mcp_tools.py  orchestrator.py  schemas.py
app/agents/: base.py  catalog_agent.py  guardrail_agent.py  handoff_agent.py  knowledge_agent.py  llm.py  rental_history_agent.py  subscription_agent.py  triage.py  web_search_agent.py
app/guardrails/: checks.py
app/tools/: base.py  catalog.py  handoff.py  knowledge_base.py  rental_history.py  subscription.py  web_search.py
app/utils/: llm.py  query_extraction.py  tracing.py
docs/: ai_usage.md  design.md  implementation_plan.md
evals/: evals.json
knowledge_base/: account-security-basics.md  cancelling-a-subscription.md  streaming-playback-issues.md  updating-payment-method.md
scripts/: restore_pagila.sh
tests/: test_api.py  test_guardrails.py  test_mcp_server.py  test_tools.py  test_tracing.py
