[project]
name = "multi-agent-support-assistant"
version = "0.1.0"
description = "FastAPI multi-agent support assistant with Semantic Kernel routing, Postgres-backed tools, and guardrails."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "semantic-kernel>=1.18",
    "python-dotenv>=1.0",
    "mcp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
